Created local database for storing all values. Showing data without network if data available in DB.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,13 @@
 <resources>
     <string name="app_name">StarkSpireshopping</string>
     <string name="shopbycat">Shop by Category</string>
-    <string name="cat_position">cat_position</string>
-    <string name="item_position">item_position</string>
+    <string name="cat_id">cat_id</string>
+    <string name="cat_name">cat_name</string>
+    <string name="productid">productid</string>
+    <string name="productName">productName</string>
+    <string name="noproduct">No Product found</string>
     <string name="url">https://stark-spire-93433.herokuapp.com/json</string>
+    <string name="color">Color:</string>
+    <string name="size">Size:</string>
+    <string name="price">Price:</string>
 </resources>
